1.4.0i4:
    Core & Setup:
    * 4269 FIX: Verifying unexpected keys in check_info while loading checks...

    Checks & Agents:
    * 4104 veeam_tapejobs: New check to monitor Veeam tape jobs
    * 4170 local: local check is now clusteraware. Best or worst state in cluster mode can be configured...
    * 4198 mkeventd_status: rework graph templates, only group metrics where it makes sense'
    * 4005 agent_activemq: now able to provide BasicAuth credentials...
            NOTE: Please refer to the migration notes!
    * 4201 mkeventd_status: avoid duplicate averaging, make graphs more precise in time resolution...
    * 4007 Windows Agent: Reduced number of needless WMI Queries when Skype performance counters are missing...
    * 4210 jolokia_generic, jolokia_generic.rate, jolokia_generic.string: New checks to monitor custom MBeans
    * 4175 didactum_sensors_analog.humidity: new check which monitors the humidity of Didactum devices supporting the DIDACTUM-SYSTEM-MIB
    * 4257 logwatch.groups: now allows regular expressions within include and exclude patterns each beginning with a tilde
    * 4013 Ruckus Spot / ruckus_spot_locations: new check to monitor the number of unqiue MACs addresses...
    * 4171 FIX: perle_psmu: fixed value error...
    * 4172 FIX: smart.temp: fixed discovery and check function...
    * 4173 FIX: if.include: ignore some more keys in 'Network interfaces and switch ports' rule which are only used for interface grouping
    * 4207 FIX: mk_jolokia: Use configured port as default instance name...
            NOTE: Please refer to the migration notes!
    * 4208 FIX: mk_jolokia: Plugin now works with jolokia versions requiring the base url to finish with a slash...
    * 4174 FIX: added missing perfometer for interface services
    * 4119 FIX: check_mk_agent.solaris: fixed run_cached function...
    * 4006 FIX: Windows Agent: Fixed possible memory leak when using logwatch with vista api setting