@@ -1,0 +1,15 @@
+Title: Fixed piggyback hosts with spaces in names leading to crashes
+Level: 1
+Component: core
+Compatible: compat
+Version: 1.4.0i4
+Date: 1484818031
+Class: fix
+
+It was possible for agent plugins / special agents to create piggyback hosts
+with spaces in their names which lead to crashes of Check_MK check helpers
+when trying to check these hosts.
+
+These spaces will now automatically be replaced by underscores to workaround
+this issue. In case you want to have another replacement logic, you can use
+the piggyback translation ruleset to override the default behaviour.
