@@ -1,6 +1,7 @@
 1.4.0i4:
     Core & Setup:
     * 4269 FIX: Verifying unexpected keys in check_info while loading checks...
+    * 4281 FIX: Fixed piggyback hosts with spaces in names leading to crashes...
 
     Checks & Agents:
     * 4104 veeam_tapejobs: New check to monitor Veeam tape jobs
